Product section completed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
+     <!-- HEADER SECTION  -->
     <header>
         <a href="#" class="logo">Food</a>
         <div class="bx bx-menu" id="menu-icon"> </div>
@@ -24,7 +25,7 @@
         <div class="home-text">
             <h1>Food Website</h1>
             <h2>Food The <br>Most Precious Thing</h2>
-            <a href="#" class="btn">Today's Menu</a>
+            <a href="#menu" class="btn">Today's Menu</a>
         </div>
         <div class="home-image">
             <img src="img/home.png" alt="Home page image">
@@ -40,7 +41,43 @@
             <h2>We speak the good <br>food language</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias laborum voluptatibus, non, harum eum repudiandae officia assumenda rerum maxime fuga optio, suscipit dolor necessitatibus repellat obcaecati perspiciatis quae architecto? Doloremque?
             Sint . Architecto animi excepturi ut magni ullam reiciendis aliquid obcaecati, laboriosam veritatis error perspiciatis voluptatum? Blanditiis pariatur temporibus ipsa?</p>
-            <a href="#" class="btn">Today's Menu</a>
+            <a href="#menu" class="btn">Today's Menu</a>
+        </div>
+     </section>
+     <!-- MENU SECTION -->
+     <section class="menu" id="menu">
+        <div class="heading">
+            <span>Food menu</span>
+            <h2>Fresh taste and great price</h2>
+        </div>
+        <div class="menu-container">
+            <div class="box">
+                <div class="box-img">
+                    <img src="img/food1.png" alt="">
+                </div>
+                <h2>Chicken Burger</h2>
+                <h3>Tasty Food</h3>
+                <span>$11.00</span>
+                <i class='bx bx-cart'></i>
+            </div>
+            <div class="box">
+                <div class="box-img">
+                    <img src="img/food2.png" alt="">
+                </div>
+                <h2>Special Burger</h2>
+                <h3>Tasty Food</h3>
+                <span>$11.00</span>
+                <i class='bx bx-cart'></i>
+            </div>
+            <div class="box">
+                <div class="box-img">
+                    <img src="img/food3.png" alt="">
+                </div>
+                <h2>Chicken Fry Pack</h2>
+                <h3>Tasty Food</h3>
+                <span>$11.00</span>
+                <i class='bx bx-cart'></i>
+            </div>
         </div>
      </section>
     <script src="script.js"></script>
