--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,21 +8,22 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
+
 <body>
-     <!-- HEADER SECTION  -->
+    <!-- HEADER SECTION  -->
     <header>
         <a href="#" class="logo">Food</a>
         <div class="bx bx-menu" id="menu-icon"> </div>
-            <ul class="navbar">
-                <li><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#menu">Menu</a></li>
-                <li><a href="#service">Service</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+        <ul class="navbar">
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#service">Service</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
     </header>
-     <!-- HOME SECTION  -->
-     <section class="home" id="home">
+    <!-- HOME SECTION  -->
+    <section class="home" id="home">
         <div class="home-text">
             <h1>Food Website</h1>
             <h2>Food The <br>Most Precious Thing</h2>
@@ -30,22 +32,25 @@
         <div class="home-image">
             <img src="img/home.png" alt="Home page image">
         </div>
-     </section>
-     <!-- ABOUT SECTION -->
-     <section class="about" id="about">
+    </section>
+    <!-- ABOUT SECTION -->
+    <section class="about" id="about">
         <div class="about-img">
             <img src="img/about.png" alt="About image">
         </div>
         <div class="about-text">
             <span>About Us</span>
             <h2>We speak the good <br>food language</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias laborum voluptatibus, non, harum eum repudiandae officia assumenda rerum maxime fuga optio, suscipit dolor necessitatibus repellat obcaecati perspiciatis quae architecto? Doloremque?
-            Sint . Architecto animi excepturi ut magni ullam reiciendis aliquid obcaecati, laboriosam veritatis error perspiciatis voluptatum? Blanditiis pariatur temporibus ipsa?</p>
-            <a href="#menu" class="btn">Today's Menu</a>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias laborum voluptatibus, non, harum eum
+                repudiandae officia assumenda rerum maxime fuga optio, suscipit dolor necessitatibus repellat obcaecati
+                perspiciatis quae architecto? Doloremque?
+                Sint . Architecto animi excepturi ut magni ullam reiciendis aliquid obcaecati, laboriosam veritatis
+                error perspiciatis voluptatum? Blanditiis pariatur temporibus ipsa?</p>
+            <a href="#" class="btn">Learn more</a>
         </div>
-     </section>
-     <!-- MENU SECTION -->
-     <section class="menu" id="menu">
+    </section>
+    <!-- MENU SECTION -->
+    <section class="menu" id="menu">
         <div class="heading">
             <span>Food menu</span>
             <h2>Fresh taste and great price</h2>
@@ -79,7 +84,82 @@
                 <i class='bx bx-cart'></i>
             </div>
         </div>
-     </section>
+    </section>
+    <!--SERVICE SECTION -->
+    <section class="service" id="service">
+        <div class="heading">
+            <span>Services</span>
+            <h2>We provide best quality food</h2>
+        </div>
+        <div class="service-container">
+            <div class="s-box">
+                <img src="img/s1.png" alt="">
+                <h3>Order</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae sint harum magni </p>
+            </div>
+            <div class="s-box">
+                <img src="img/s2.png" alt="">
+                <h3>Shipping</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae sint harum magni </p>
+            </div>
+            <div class="s-box">
+                <img src="img/s3.png" alt="">
+                <h3>Delevered</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae sint harum magni </p>
+            </div>
+        </div>
+    </section>
+    <!--SERVICE SECTION PART-2-->
+    <section class="cta">
+        <h2>We make quaity food <br>Everyday</h2>
+        <a href="#" class="btn">Let's talk</a>
+    </section>
+    <!-- CONTACT SECTION -->
+    <section class="contact" id="contact">
+        <div class="footer">
+            <div class="main">
+                <div class="col">
+                    <h4>Menu Links</h4>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#menu">Menu</a></li>
+                        <li><a href="#service">Service</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4>Our Service</h4>
+                    <ul>
+                        <li><a href="#">Random</a></li>
+                        <li><a href="#">Random</a></li>
+                        <li><a href="#">Random</a></li>
+                        <li><a href="#">Random</a></li>
+                        <li><a href="#">Random</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4>Information</h4>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Delivary Information</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4>Contact Us</h4>
+                    <div class="social">
+                        <a href=""><i class='bx bxl-facebook' ></i></a>
+                        <a href=""><i class='bx bxl-instagram'></i></a>
+                        <a href=""><i class='bx bxl-twitter' ></i></a>
+                        <a href=""><i class='bx bxl-youtube' ></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
+
 </html>
