Added mediaquery,js for menu icon (FINISHED)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- ABOUT SECTION -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="img/about.png" alt="About image">
+            <img src="img/about.png" alt="About image" >
         </div>
         <div class="about-text">
             <span>About Us</span>
@@ -46,7 +46,7 @@
                 perspiciatis quae architecto? Doloremque?
                 Sint . Architecto animi excepturi ut magni ullam reiciendis aliquid obcaecati, laboriosam veritatis
                 error perspiciatis voluptatum? Blanditiis pariatur temporibus ipsa?</p>
-            <a href="#" class="btn">Learn more</a>
+            <a href="https://github.com/Aswinchandran1" class="btn" title="Navigate To My Github Profile">Learn more</a>
         </div>
     </section>
     <!-- MENU SECTION -->
@@ -112,7 +112,7 @@
     <!--SERVICE SECTION PART-2-->
     <section class="cta">
         <h2>We make quaity food <br>Everyday</h2>
-        <a href="#" class="btn">Let's talk</a>
+        <a href="https://www.linkedin.com/in/aswin-chandran-8738012b4/" class="btn" title="Navigate To My Linkedin Profile">Let's talk</a>
     </section>
     <!-- CONTACT SECTION -->
     <section class="contact" id="contact">
@@ -131,11 +131,11 @@
                 <div class="col">
                     <h4>Our Service</h4>
                     <ul>
-                        <li><a href="#">Random</a></li>
-                        <li><a href="#">Random</a></li>
-                        <li><a href="#">Random</a></li>
-                        <li><a href="#">Random</a></li>
-                        <li><a href="#">Random</a></li>
+                        <li><a href="#">Onine Booking</a></li>
+                        <li><a href="#">Home Delivary</a></li>
+                        <li><a href="#">Sheduled Delivary</a></li>
+                        <li><a href="#">Gift Cards</a></li>
+                        <li><a href="#">Order Tracking</a></li>
                     </ul>
                 </div>
                 <div class="col">
@@ -150,10 +150,10 @@
                 <div class="col">
                     <h4>Contact Us</h4>
                     <div class="social">
-                        <a href=""><i class='bx bxl-facebook' ></i></a>
-                        <a href=""><i class='bx bxl-instagram'></i></a>
-                        <a href=""><i class='bx bxl-twitter' ></i></a>
-                        <a href=""><i class='bx bxl-youtube' ></i></a>
+                        <a href="https://www.facebook.com/"><i class='bx bxl-facebook' ></i></a>
+                        <a href="https://www.instagram.com/"><i class='bx bxl-instagram'></i></a>
+                        <a href="https://www.x.com/"><i class='bx bxl-twitter' ></i></a>
+                        <a href="https://www.youtube.com/"><i class='bx bxl-youtube' ></i></a>
                     </div>
                 </div>
             </div>
